--- a/frontEnd/nginx/default.conf
+++ b/frontEnd/nginx/default.conf
@@ -1,23 +1,74 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
 
-    root /var/www/html;
-
-    index index.html index.htm index.nginx-debian.html;
-
+server {
+    listen 443 ssl;
     server_name _;
 
+    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    root /var/www/html;
+    index index.html;
+
+    location /login/oauth2/ {
+        proxy_pass http://localhost:8080;
+    }
+
+    location /oauth2/ {
+        proxy_pass http://localhost:8080;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+    }
+
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ @router;
+    }
+
+    location @router {
+        rewrite ^.*$ /index.html last;
+    }
+
+    location /chat/ {
+        proxy_pass http://localhost:8080/chat/;
+
+        proxy_http_version 1.1;
+
+        # WebSocket 지원 (필요하면)
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # 일반적인 프록시 헤더
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_cache_bypass $http_upgrade;
     }
 
     location /api/ {
-        proxy_pass http://dabom-svc.dabom:8080;
+        proxy_pass http://localhost:8080;
+
         proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
+
         proxy_cache_bypass $http_upgrade;
     }
 }
