--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
     "prettier": "3.5.3",
-    "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7"
+    "vite": "^7.0.0"
   }
 }
